[package]
name = "etsi-web"
version = "0.8.0"
edition = "2021"
authors = ["consider it GmbH"]
description = "Tools for encoding and decoding ETSI messages (GN + Transport + CAM/DENM/IVIM/SSEM/SREM/MAPEM/SPATEM)"
readme = "./README.md"
repository = "https://github.com/consider-it/V2X-Etsi_web"

[lib]
name = "etsi_web"
crate-type = ["lib", "cdylib"]
doctest = false

[profile.release]
lto = true

[features]
default = ["etsi", "json"]
# enable ETSI ASN.1 parser
etsi = ["dep:nom", "rasn", "transport", "dep:hex"]
# enable GN (and other transport header) parser
transport = ["dep:geonetworking", "dep:nom", "dep:etherparse"]
# enable conversions to and from JSON
json = ["geonetworking/json", "dep:serde", "dep:serde_json", "dep:js-sys"]
# enable conversions to geo-types
geo = ["dep:geo-types"]

[dependencies]
etherparse = { version = "0.19", optional = true }
geonetworking = { version = "0.2", default-features = false, optional = true }
geo-types = { version = "0.7.17", optional = true }
nom = { version = "7.1.3", optional = true }
rasn = { version = "0.27.2", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[target.wasm32-unknown-unknown.dependencies]
hex = { version = "0.4", optional = true }
js-sys = { version = "0.3.79", optional = true }
wasm-bindgen = { version = "0.2.102" }

[dev-dependencies]
pretty_assertions = "1.4.1"
assert_float_eq = "1.2.0"
wasm-bindgen-test = "0.3.52"
xmltree = "0.11.0"
